lab/prometheus/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-actuator-demo
  name: spring-actuator-demo
spec:
  selector:
    app: spring-actuator-demo

  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http

    - port: 9091
      targetPort: 9091
      protocol: TCP
      name: http-prometheus

  internalTrafficPolicy: Cluster
