lab/prometheus/deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik # [nginx, traefik]

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-actuator-demo
                port:
                  number: 8080
    - http:
        paths:
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: spring-actuator-demo
                port:
                  number: 9091
